devops/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stableyield-frontend
  name: stableyield-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stableyield-frontend
  template:
    metadata:
      labels:
        app: stableyield-frontend
    spec:
      containers:
      - image: stableyield/frontend:latest
        name: frontend
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
