devops/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stableyield-backend-service
spec:
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    app: stableyield-backend
  type: ClusterIP
